 - Util: Fix socket bind addresses
 - All: Fix instruction tables getting zeroed when linking sometimes
 - SDL: Fix SDL 1.2 build
 - ARM7: Fix flags on SBC/RSC
 - Util: Fix realloc semantics in utf16to8
 - ARM7: Fix setting spsr privilege bits when spsr is empty
 - GBA BIOS: Fix ArcTan2 accuracy and boundary conditions
 - SDL: Fix sporadic crash when deinitializing audio
Misc:
 - GBA: Slightly optimize GBAProcessEvents
 - Qt: Add preset for DualShock 4
 - SDL: Remove default gamepad mappings
 - Qt: Update 360 input profile on OS X to reflect newer drivers
 - Qt: Remove use of NaN
 - FFmpeg: Update dependencies on Ubuntu
 - All: Allow use of external minizip library
 - GBA Video: Null renderer should return proper register values
 - Libretro: Disable logging game errors, BIOS calls and stubs in release builds
 - Qt: Canonicalize file paths when loading games
 - Qt: Add refresh button to controller editing
 - Debugger: CLI debugger now exits when end-of-stream is reached
 - VFS: VFile.sync now updates modified time
 - GBA: Add overrides for DBZ: Legacy of Goku II and Ueki no Housoku
 - Util: Fix intermittent build failure on OS X

0.4.0: (2016-02-02)
Features:
 - Officially supported ports for the Nintendo 3DS, Wii, and PlayStation Vita
 - I/O viewer
 - Booting of multiboot images
 - Customization of GIF recording
 - Libretro: Cheat code support
 - Support for GLSL shaders
 - ROM information view
 - Support for VBA-style cheat codes
 - Savestates now store creation timestamps
 - Key autofire
 - Libretro: Allow blocking opposing directional input
 - OpenEmu core for OS X
 - Libretro: Settings for using BIOS and skipping intro
 - Libretro: Customizable idle loop removal
 - Implemented cycle counting for sprite rendering
 - Cleaner, unified settings window
 - Added a setting for pausing when the emulator is not in focus
 - Customizable paths for save games, save states, screenshots and patches
 - Controller hotplugging